--- a/themes/standrews/_config.yml
+++ b/themes/standrews/_config.yml
@@ -8,20 +8,20 @@ menu:
 favicon_url:
 
 # Default Image for Posts
-default_cover_image: images/default.jpg
+default_cover_image: images/jaredsprague.jpg
 
 # Google Analytics Tracking ID
 google_analytics:
 
 # Social Accounts
 email_url: 
-twitter_url: https://twitter.com/?lang=en
-facebook_url: https://www.facebook.com/
-instagram_url: https://www.instagram.com/
-linkedin_url: https://www.linkedin.com/
+twitter_url: https://twitter.com/caramelcode
+facebook_url: https://www.facebook.com/jared.sprague
+instagram_url: https://www.instagram.com/caramelcode/
+linkedin_url: https://www.linkedin.com/in/jared-sprague-9258081/
 dribbble_url:
-github_url:
-googleplus_url:
+github_url: https://github.com/Jared-Sprague
+googleplus_url: 
 behance_url:
 fivehundredpx_url:
 
