--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.3.7"
+    "version": "3.3.9"
+  },
+  "scripts": {
+    "deploy": "rm db.json; rm -rf .deploy_git; hexo deploy -g"
   },
   "dependencies": {
-    "hexo": "^3.2.0",
+    "hexo": "^3.3.9",
     "hexo-deployer-git": "^0.2.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
