--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ skip_render:
 - "examples/**/*"
 - "ld40/**/*"
 - "comtype/**/*"
+- "ransom/**/*"
 
 # Writing
 new_post_name: :title.md # File name of new posts
